State-saving: remember open tabs on quit
Much like how browsers have session-restore, it may be worthwhile having an similar option in Files, i.e. when you quit it recalls what locations you were in and reopens (or prompts to reopen) them instead of starting in the Home folder every time.
This would be useful in a case where you have to reboot the system in the middle of a task and you had several locations open.
/cc @aday