general: Add state saving feature to Nautilus

Keep track of the opened windows and tabs while browsing folders
in Nautilus.  Upon location change and closing windows / tabs
make a call to nautilus_application_save_window_state () which is
responsible to save the state in a file under the default config
folder \nautilus\running-state (i.e. ~/.config/nautilus/running-state).
The state should be saved as follows for each window

[window]
uri#1
uri#2
...etc

There's no need to save the state more often than every 5 seconds
especially since the user may be browsing quickly or acting on multiple
items at once, so use a 5 second idle timer when saving the state.

Delete the state file when cleanly exiting the program.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/1196